@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                               ErrorLog.c                                */
-/* Original code written by Daniel Hawkins. Last modified on 2015-06-03.   */
+/* Original code written by Daniel Hawkins. Last modified on 2016-01-16.   */
 /*                                                                         */
 /* The file defines the functions for logging errors.                      */
 /*                                                                         */
@@ -34,14 +34,14 @@ void log_event(enum errorType err, const char *msg, ...){
        // If message is too low of importance to print or log, just skip it all
        if (err < settings.min_log_level && err < settings.min_print_level)
            return;
-       char fnMsg[10000];
        va_list ap;
-       va_start(ap, msg);
-       vsnprintf(fnMsg, sizeof(fnMsg), msg, ap);
-       va_end(ap);
        if (err >= settings.min_print_level){
            // Print the message
-           fprintf(stderr, "%s: %s\n", ERROR_TYPE_CHARS[err], fnMsg);
+	   fprintf(stderr, "%s: ", ERROR_TYPE_CHARS[err]);
+	   va_start(ap, msg);
+	   vfprintf(stderr, msg, ap);
+	   va_end(ap);
+	   fputs("\n", stderr);
        }
        // If major enough, log to the file
        if (err >= settings.min_log_level){
@@ -49,8 +49,13 @@ void log_event(enum errorType err, const char *msg, ...){
            struct tm *date = localtime(&theTime);
            // Create output file stream object
            FILE *ErrorFile = fopen(settings.log_file, "a");
-           if (ErrorFile)
-                fprintf(ErrorFile, "%2i %s %4i %02i:%02i:%02i: %s: %s\n", date->tm_mday, MONTH[date->tm_mon], date->tm_year+1900, date->tm_hour, date->tm_min, date->tm_sec, ERROR_TYPE_CHARS[err], fnMsg);
+           if (ErrorFile){
+		fprintf(ErrorFile, "%2i %s %4i %02i:%02i:%02i: %s: ", date->tm_mday, MONTH[date->tm_mon], date->tm_year+1900, date->tm_hour, date->tm_min, date->tm_sec, ERROR_TYPE_CHARS[err]);
+		va_start(ap, msg);
+		vfprintf(ErrorFile, msg, ap);
+		va_end(ap);
+		fputs("\n", ErrorFile);
+	   }
            else{
                 fputs("ERROR: Could not open log file. Errors will not be logged.\n", stderr);
                 return;
